java-module: Fix monitoring info create/update request bodies
