# java-module/mc-o11y-agent/src/main/java/mcmp/mc/observability/mco11yagent/monitoring/model/dto/MonitoringConfigInfoCreateDTO.java
@@ -1,4 +1,4 @@
-package mcmp.mc.observability.mco11yagent.monitoring.model;
+package mcmp.mc.observability.mco11yagent.monitoring.model.dto;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import lombok.Getter;
@@ -8,10 +8,7 @@ import mcmp.mc.observability.mco11yagent.monitoring.annotation.Base64EncodeField
 
 @Getter
 @Setter
-public class MonitoringConfigInfo {
-
-    @JsonProperty(value = "seq")
-    private Long seq;
+public class MonitoringConfigInfoCreateDTO {
 
     @JsonProperty("ns_id")
     private String nsId;
@@ -26,9 +23,6 @@ public class MonitoringConfigInfo {
     @Base64DecodeField
     @JsonProperty("name")
     private String name;
-
-    @JsonProperty("state")
-    private String state;
 
     @JsonProperty("plugin_seq")
     private Long pluginSeq;
