# java-module/mc-o11y-manager/src/main/java/mcmp/mc/observability/mco11ymanager/model/dto/MonitoringConfigInfoUpdateDTO.java
@@ -1,14 +1,14 @@
-package mcmp.mc.observability.mco11yagent.monitoring.model;
+package mcmp.mc.observability.mco11ymanager.model.dto;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import lombok.Getter;
 import lombok.Setter;
-import mcmp.mc.observability.mco11yagent.monitoring.annotation.Base64DecodeField;
-import mcmp.mc.observability.mco11yagent.monitoring.annotation.Base64EncodeField;
+import mcmp.mc.observability.mco11ymanager.annotation.Base64DecodeField;
+import mcmp.mc.observability.mco11ymanager.annotation.Base64EncodeField;
 
 @Getter
 @Setter
-public class MonitoringConfigInfo {
+public class MonitoringConfigInfoUpdateDTO {
 
     @JsonProperty(value = "seq")
     private Long seq;
@@ -26,9 +26,6 @@ public class MonitoringConfigInfo {
     @Base64DecodeField
     @JsonProperty("name")
     private String name;
-
-    @JsonProperty("state")
-    private String state;
 
     @JsonProperty("plugin_seq")
     private Long pluginSeq;
